# BUCSA-VahidFanClub

./: database.db  database.py  mail_service.py  main.py  pyproject.toml
static/: styles.css
templates/: admin.html  ambassadors.html  events.html  forgotpassword.html  home.html  layout.html  login.html  messages.html  register.html  resources.html  verify.html
